src/com/github/tycrelic/sqldisadvantage/parser/SqlParser.java
/* SqlParser.java */
/* Generated By:JavaCC: Do not edit this line. SqlParser.java */
package com.github.tycrelic.sqldisadvantage.parser;

import com.github.tycrelic.sqldisadvantage.command.Statement;
import com.github.tycrelic.sqldisadvantage.command.DefineCommand;
import com.github.tycrelic.sqldisadvantage.command.SetCommand;
import com.github.tycrelic.sqldisadvantage.command.ColumnCommand;
import com.github.tycrelic.sqldisadvantage.command.SpoolCommand;
import com.github.tycrelic.sqldisadvantage.command.Command;
import java.util.*;

/**
 * The parser generated by JavaCC
 */
public class SqlParser implements SqlParserConstants {
  private ClientEnvironment env;
  public void parse(ClientEnvironment env) throws ParseException {
    this.env = env;
    Commands();
  }

  private static String unquote(String str) {
    if(str.startsWith("'")) {
      return str.substring(1, str.length()-1).replace("''", "'");
    }
    else {
      return str;
    }
        }

  private static final String extractOriginalText(Token firstToken, Token lastToken) {
    Token t = firstToken;
    Token et = lastToken.next;

    StringBuilder buf = new StringBuilder();
    while(t != null && t != et) {
      if (t.specialToken != null) {
          Token st = t.specialToken;
          while (st.specialToken != null) st = st.specialToken;
          while (st != null) {
            buf.append(st.image);
            st = st.next;
          }
      }
      buf.append(t.image);
      t = t.next;
    }
    return buf.toString();
  }

  private void addCommand(Command cmd, Token firstToken, Token lastToken) {
      cmd.setBeginLine(firstToken.beginLine);
      cmd.setBeginColumn(firstToken.beginColumn);
      cmd.setEndLine(lastToken.endLine);
      cmd.setEndColumn(lastToken.endColumn);

      cmd.setText(extractOriginalText(firstToken, lastToken));
      env.addCommand(cmd);
  }

  final public void Commands() throws ParseException {Token t;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SELECT:
      case CALL:
      case COLUMN:
      case DEFINE:
      case SET:
      case SPOOL:
      case SEMICOLON:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COLUMN:
      case DEFINE:
      case SET:
      case SPOOL:{
        SqlClientCommand();
        break;
        }
      case SELECT:
      case CALL:{
        Statement();
        break;
        }
      case SEMICOLON:{
        t = jj_consume_token(SEMICOLON);
Command cmd = new Command();
      addCommand(cmd, t, t);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    t = jj_consume_token(0);
Command cmd = new Command();
    addCommand(cmd, t, t);
  }

  final public void SqlClientCommand() throws ParseException {Token t1;
  Token t2 = null;
  Token t3 = null;

  Token et;
  Command cmd;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SET:{
      t1 = jj_consume_token(SET);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SET_APPINFO:{
        t2 = jj_consume_token(SET_APPINFO);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_ARRAYSIZE:{
        t2 = jj_consume_token(SET_ARRAYSIZE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_AUTOCOMMIT:{
        t2 = jj_consume_token(SET_AUTOCOMMIT);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_AUTOPRINT:{
        t2 = jj_consume_token(SET_AUTOPRINT);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_AUTORECOVERY:{
        t2 = jj_consume_token(SET_AUTORECOVERY);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_AUTOTRACE:{
        t2 = jj_consume_token(SET_AUTOTRACE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_BLOCKTERMINATOR:{
        t2 = jj_consume_token(SET_BLOCKTERMINATOR);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_CMDSEP:{
        t2 = jj_consume_token(SET_CMDSEP);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_COLSEP:{
        t2 = jj_consume_token(SET_COLSEP);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_CONCAT:{
        t2 = jj_consume_token(SET_CONCAT);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_COPYCOMMIT:{
        t2 = jj_consume_token(SET_COPYCOMMIT);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_COPYTYPECHECK:{
        t2 = jj_consume_token(SET_COPYTYPECHECK);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_DEFINE:{
        t2 = jj_consume_token(SET_DEFINE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_DESCRIBE:{
        t2 = jj_consume_token(SET_DESCRIBE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_ECHO:{
        t2 = jj_consume_token(SET_ECHO);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_EDITFILE:{
        t2 = jj_consume_token(SET_EDITFILE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_EMBEDDED:{
        t2 = jj_consume_token(SET_EMBEDDED);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_ERRORLOGGING:{
        t2 = jj_consume_token(SET_ERRORLOGGING);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_ESCAPE:{
        t2 = jj_consume_token(SET_ESCAPE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_ESCCHAR:{
        t2 = jj_consume_token(SET_ESCCHAR);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_EXITCOMMIT:{
        t2 = jj_consume_token(SET_EXITCOMMIT);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_FEEDBACK:{
        t2 = jj_consume_token(SET_FEEDBACK);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_FLAGGER:{
        t2 = jj_consume_token(SET_FLAGGER);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_FLUSH:{
        t2 = jj_consume_token(SET_FLUSH);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_HEADING:{
        t2 = jj_consume_token(SET_HEADING);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_HEADSEP:{
        t2 = jj_consume_token(SET_HEADSEP);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_INSTANCE:{
        t2 = jj_consume_token(SET_INSTANCE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_LINESIZE:{
        t2 = jj_consume_token(SET_LINESIZE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_LOBOFFSET:{
        t2 = jj_consume_token(SET_LOBOFFSET);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_LOGSOURCE:{
        t2 = jj_consume_token(SET_LOGSOURCE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_LONG:{
        t2 = jj_consume_token(SET_LONG);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_LONGCHUNKSIZE:{
        t2 = jj_consume_token(SET_LONGCHUNKSIZE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_MARKUP:{
        t2 = jj_consume_token(SET_MARKUP);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_NEWPAGE:{
        t2 = jj_consume_token(SET_NEWPAGE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_NULL:{
        t2 = jj_consume_token(SET_NULL);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_NUMFORMAT:{
        t2 = jj_consume_token(SET_NUMFORMAT);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_NUMWIDTH:{
        t2 = jj_consume_token(SET_NUMWIDTH);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_OUTPUTFORMAT:{
        t2 = jj_consume_token(SET_OUTPUTFORMAT);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_PAGESIZE:{
        t2 = jj_consume_token(SET_PAGESIZE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_PAUSE:{
        t2 = jj_consume_token(SET_PAUSE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_RECSEP:{
        t2 = jj_consume_token(SET_RECSEP);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_RECSEPCHAR:{
        t2 = jj_consume_token(SET_RECSEPCHAR);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SERVEROUTPUT:{
        t2 = jj_consume_token(SET_SERVEROUTPUT);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SHIFTINOUT:{
        t2 = jj_consume_token(SET_SHIFTINOUT);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SHOWMODE:{
        t2 = jj_consume_token(SET_SHOWMODE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SQLBLANKLINES:{
        t2 = jj_consume_token(SET_SQLBLANKLINES);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SQLCASE:{
        t2 = jj_consume_token(SET_SQLCASE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SQLCONTINUE:{
        t2 = jj_consume_token(SET_SQLCONTINUE);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SQLNUMBER:{
        t2 = jj_consume_token(SET_SQLNUMBER);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SQLPLUSCOMPATIBILITY:{
        t2 = jj_consume_token(SET_SQLPLUSCOMPATIBILITY);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SQLPREFIX:{
        t2 = jj_consume_token(SET_SQLPREFIX);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SQLPROMPT:{
        t2 = jj_consume_token(SET_SQLPROMPT);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SQLTERMINATOR:{
        t2 = jj_consume_token(SET_SQLTERMINATOR);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_SUFFIX:{
        t2 = jj_consume_token(SET_SUFFIX);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_TAB:{
        t2 = jj_consume_token(SET_TAB);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_TERMOUT:{
        t2 = jj_consume_token(SET_TERMOUT);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_TIME:{
        t2 = jj_consume_token(SET_TIME);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_TIMING:{
        t2 = jj_consume_token(SET_TIMING);
        t3 = jj_consume_token(IDENTIFIER);
        break;
        }
      case SET_TRIMOUT:{
        t2 = jj_consume_token(SET_TRIMOUT);
        t3 = jj_consume_token(IDENTIFIER);
